[FIX] Enhanced "players don't spawn in each other" code
[FIX] Zombies spawning in each other using the "players don't spawn in each other" code (a bit thanks to Enjia2000)
[FIX] Settings and globals not loading
[FIX] prop protection assigning all world props to the owner of the server(in case of a listen server)
[FIX] Medkit now heals to someone's max health(determined on spawn)
[CHANGE] /buypistol to /buy because of the custom items
[CHANGE] rp_max<customteam> to rp_max<customteam>s
[CHANGE] Made admins.lua a bit more idiot proof
[CHANGE] Cooks can now buy food too when hungermod is off
[CHANGE] Letters get removed after 10 minutes, long enoug and prevents them for lying there for like hours.
[CHANGE] Custom shipments without a team entered will make it so that every team can spawn the shipment
[CHANGE] Moved changelog part in init.lua to the changelog.txt file
[CHANGE] The way of saving settings and globals, it now doesn't use text files but SQL
[CHANGE] Admins can touch world props to players can touch world props so players can pick up world items.
[CHANGE] Chiefs can now change to cops by doing /cp
[CHANGE] You will buy a door instantly when there would be only one button in the keys menu
[CHANGE] When there's only one option in the keys menu, it will do that option instantly without opening the menu
[REMOVE] The easter egg :(
[REMOVE] the player possessor
[REMOVE] refesh_int concommand, it's been replaced by rp_resetallsettings

SVN VERSTION till 150/ 2.3.5:
Updated by: FPtje Falco

[ADD] Cops can arrest sleeping people
[ADD] Admins can disable the No-respawning when changing job with rp_norespawn 
[ADD] Admins can allow/disallow hobo's by doing rp_allowhobos <1/0>
[ADD] Every door and vehicle controls are put in the reload function of the keys SWEP
[ADD] Re-added the earthquake sound
[ADD] DarkRP now automaticly saves the DarkRP settings(not the costs) in a text file every minute and will get restored when the server starts(like after a crash)